Update document to reflect new features of ADL support in 2.8.0 release.
(cherry picked from commit 91f2b7a13d1e97be65db92ddabc627cc29ac0009)

--- a/hadoop-project/src/site/markdown/index.md.vm
+++ b/hadoop-project/src/site/markdown/index.md.vm
@@ -30,6 +30,9 @@ Here is a short overview of the major features and improvements.
     *   [Specification work](./hadoop-project-dist/hadoop-common/filesystem/index.html)
         related to the Hadoop Compatible Filesystem (HCFS) effort.
 
+    *   Support integration with Azure Data Lake (ADL) as an alternative
+        Hadoop-compatible file system.
+
 *   HDFS
 
     *   Support for POSIX-style filesystem extended attributes. See the
